invalid_label_arg_keywords_test/invalid_label_arg_keywords_test_6.src
.IPPcode24
LABEL TF@b